<resources>
    <string name="app_name">My LCD Clock</string>
    <string name="time_zone">Please Select Your Time Zone</string>
    <string name="clock_color">Please Select A Color For The Clock</string>
    <string name="background_color">Please Select A Background Color</string>
    <string name="clock_mode">Please Select Clock Mode</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="red">Red</string>
    <string name="s_red">Red was Selected</string>
    <string name="bronze">Bronze</string>
    <string name="s_bronze">Bronze was Selected</string>
    <string name="black">Black</string>
    <string name="s_black">Black was Selected</string>
    <string name="gray">Gray</string>
    <string name="s_gray">Gray was Selected</string>
    <string name="white">White</string>
    <string name="s_white">White was Selected</string>
    <string name="orange">Orange</string>
    <string name="s_orange">Orange was Selected</string>
    <string name="blue">Blue</string>
    <string name="s_blue">Blue was Selected</string>
    <string name="cyan">Cyan</string>
    <string name="s_cyan">Cyan was Selected</string>
    <string name="indigo">Indigo</string>
    <string name="s_indigo">Indigo was Selected</string>
    <string name="purple">Purple</string>
    <string name="s_purple">Purple was Selected</string>
    <string name="magenta">Magenta</string>
    <string name="s_magenta">Magenta was Selected</string>
    <string name="pink">Pink</string>
    <string name="s_pink">Pink was Selected</string>
    <string name="gold">Gold</string>
    <string name="s_gold">Gold was Selected</string>
    <string name="silver">Silver</string>
    <string name="s_silver">Silver was Selected</string>
    <string name="green">Green</string>
    <string name="s_green">Green was Selected</string>
    <string name="yellow">Yellow</string>
    <string name="s_yellow">Yellow was Selected</string>
    <string name="main">Return to Clock</string>
    <string name="select_color">Please Select a Color</string>
    <string name="m_switch">24 HR Mode</string>
    <string-array name="time_zone">
        <item>Pacific</item>
        <item>Mountain</item>
        <item>Central</item>
        <item>Eastern</item>
    </string-array>

</resources>
