<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/color_grid"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="4"
    android:orientation="horizontal">


    <Button
        android:text="@string/select_color"
        android:id="@+id/select_color"
        android:textStyle="bold"
        android:layout_columnSpan="4"
        android:layout_gravity="fill"/>

    <Button
        android:text="@string/black"
        android:id="@+id/black"
        android:onClick="buttonClicked"
        android:background="#000000"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_gravity="fill"/>

    <Button
        android:text="@string/green"
        android:id="@+id/green"
        android:onClick="buttonClicked"
        android:background="#00b400"
        android:textStyle="bold"
        android:layout_gravity="fill" />

    <Button
        android:text="@string/yellow"
        android:id="@+id/yellow"
        android:onClick="buttonClicked"
        android:background="#ffff00"
        android:textStyle="bold"
        android:layout_gravity="fill"/>

    <Button
        android:text="@string/white"
        android:id="@+id/white"
        android:onClick="buttonClicked"
        android:background="#ffffff"
        android:textStyle="bold"
        android:layout_gravity="fill" />

    <Button
        android:text="@string/red"
        android:id="@+id/red"
        android:onClick="buttonClicked"
        android:background="#C10000"
        android:textStyle="bold"
        android:layout_gravity="fill"/>

    <Button
        android:text="@string/orange"
        android:id="@+id/orange"
        android:onClick="buttonClicked"
        android:background="#ffa500"
        android:textStyle="bold"
        android:layout_gravity="fill"/>

    <Button
        android:text="@string/blue"
        android:id="@+id/blue"
        android:onClick="buttonClicked"
        android:background="#0000ff"
        android:textStyle="bold"
        android:layout_gravity="fill"/>

    <Button
        android:text="@string/cyan"
        android:id="@+id/cyan"
        android:onClick="buttonClicked"
        android:background="#00ffff"
        android:textStyle="bold"
        android:layout_gravity="fill"/>

    <Button
        android:text="@string/indigo"
        android:id="@+id/indigo"
        android:onClick="buttonClicked"
        android:background="#4b0082"
        android:textStyle="bold"
        android:layout_gravity="fill"/>

    <Button
        android:text="@string/purple"
        android:id="@+id/purple"
        android:onClick="buttonClicked"
        android:background="#800080"
        android:textStyle="bold"
        android:layout_gravity="fill"/>

    <Button
        android:text="@string/magenta"
        android:id="@+id/magenta"
        android:onClick="buttonClicked"
        android:background="#ff00ff"
        android:textStyle="bold"
        android:layout_gravity="fill"/>

    <Button
        android:text="@string/pink"
        android:id="@+id/pink"
        android:onClick="buttonClicked"
        android:background="#ffc0cb"
        android:textStyle="bold"
        android:layout_gravity="fill"/>

    <Button
        android:text="@string/gold"
        android:id="@+id/gold"
        android:onClick="buttonClicked"
        android:background="#ffd700"
        android:textStyle="bold"
        android:layout_gravity="fill"/>

    <Button
        android:text="@string/silver"
        android:id="@+id/silver"
        android:onClick="buttonClicked"
        android:background="#c0c0c0"
        android:textStyle="bold"
        android:layout_gravity="fill"/>

    <Button
        android:text="@string/bronze"
        android:id="@+id/bronze"
        android:onClick="buttonClicked"
        android:background="#cd7f32"
        android:textStyle="bold"
        android:layout_gravity="fill"/>

    <Button
        android:text="@string/gray"
        android:id="@+id/gray"
        android:onClick="buttonClicked"
        android:background="#808080"
        android:textStyle="bold"
        android:layout_gravity="fill"/>

    <Button
        android:text="@string/main"
        android:id="@+id/main"
        android:onClick="goToMain"
        android:textStyle="bold"
        android:layout_columnSpan="4"
        android:layout_gravity="fill"/>



</GridLayout>